[metadata]
name = colcon-fish
version = attr: colcon_fish.__version__
url = https://colcon.readthedocs.io
project_urls =
    Changelog = https://github.com/colcon/colcon-fish/milestones?direction=desc&sort=due_date&state=closed
    GitHub = https://github.com/colcon/colcon-fish/
author = Nikos Koukis
author_email = nickkouk@gmail.com
maintainer = "Nikos Koukis, Dirk Thomas"
maintainer_email = "nickkouk@gmail.com, web@dirk-thomas.net"
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: MacOS
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon to provide Fish shell scripts.
long_description = file: README.rst
keywords = colcon

[options]
install_requires =
  colcon-core>=0.4.0
packages = find:
tests_require =
  flake8>=3.6.0
  flake8-blind-except
  flake8-builtins
  flake8-class-newline
  flake8-comprehensions
  flake8-deprecated
  flake8-docstrings
  flake8-import-order
  flake8-quotes
  pep8-naming
  pylint
  pytest
  pytest-cov
  scspell3k>=2.2
zip_safe = false

[tool:pytest]
filterwarnings =
    error
junit_suite_name = colcon-fish

[options.entry_points]
colcon_core.shell =
    fish = colcon_fish.shell.fish:FishShell

[options.package_data]
colcon_fish.shell.template = *.em

[flake8]
import-order-style = google
